Mqtt publishing locally

--- a/prj.conf
+++ b/prj.conf
@@ -16,6 +16,9 @@ CONFIG_NET_CONFIG_LOG_LEVEL_ERR=y
 CONFIG_NET_CONFIG_LOG_LEVEL_INF=y
 CONFIG_NET_CONFIG_LOG_LEVEL_DBG=y
 
+# ALLL THE LOGSS!!
+CONFIG_LOG_DEFAULT_LEVEL=4
+
 # needed for `find_available_port`
 CONFIG_TEST_RANDOM_GENERATOR=y
 
@@ -40,4 +43,13 @@ CONFIG_NET_STATISTICS=y
 CONFIG_NET_STATISTICS_PERIODIC_OUTPUT=n
 
 # Make debugging not painful
-CONFIG_NO_OPTIMIZATIONS=y
+# TODO if you disable optimizations you get a stac overflow on the esp worker thread
+# To help with this should do something similar to https://github.com/zephyrproject-rtos/zephyr/issues/12820
+# Tracking down where this is happening can be made easier with:
+#CONFIG_THREAD_STACK_INFO=y
+#CONFIG_THREAD_MONITOR=y
+#CONFIG_KERNEL_SHELL=y
+#CONFIG_INIT_STACKS=y
+#CONFIG_THREAD_NAME=y
+# TODO FIXME
+#CONFIG_NO_OPTIMIZATIONS=y
