--- a/prj.conf
+++ b/prj.conf
@@ -9,15 +9,17 @@ CONFIG_UART_1=y
 CONFIG_NETWORKING=y
 CONFIG_NET_IPV4=y
 CONFIG_NET_IPV6=n
+# TCP required for MQTT
 CONFIG_NET_TCP=y
 CONFIG_NET_SOCKETS=y
 
 CONFIG_NET_CONFIG_LOG_LEVEL_ERR=y
-CONFIG_NET_CONFIG_LOG_LEVEL_INF=y
-CONFIG_NET_CONFIG_LOG_LEVEL_DBG=y
 
-# ALLL THE LOGSS!!
-CONFIG_LOG_DEFAULT_LEVEL=4
+# Allow doing work when network events occur
+CONFIG_NET_MGMT_EVENT=y
+
+# ALL THE LOGS!!
+#CONFIG_LOG_DEFAULT_LEVEL=4
 
 # needed for `find_available_port`
 CONFIG_TEST_RANDOM_GENERATOR=y
@@ -25,8 +27,6 @@ CONFIG_TEST_RANDOM_GENERATOR=y
 # Allow using the ESP as a slave modem
 CONFIG_WIFI=y
 CONFIG_WIFI_LOG_LEVEL_ERR=y
-CONFIG_WIFI_LOG_LEVEL_INF=y
-CONFIG_WIFI_LOG_LEVEL_DBG=y
 CONFIG_NET_L2_WIFI_SHELL=y
 CONFIG_WIFI_ESP=y
 CONFIG_WIFI_ESP_AT_VERSION_1_7=y
