Add initial C module for publisher

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,6 @@ project(iotclt_embedded)
 
 target_sources(app PRIVATE
                src/main.c
+               src/mqtt_publisher.c
                src/wifi_handling.c)
 target_include_directories(app PUBLIC include)
